--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,20 @@
     height: 200px;
     background: cadetblue;
 }
+.level-select {
+    margin: 0 auto 20px auto;
+    display: block;
+}
+#start {
+    display: block;
+    border: none;
+    margin: 15px auto;
+    padding: 5px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s;
+    &:hover {
+        background: firebrick;
+        color: #fff;
+    }
+}
